--- a/aws-web/src/main/resources/application.properties
+++ b/aws-web/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8798
 #database
 spring.datasource.url=jdbc:mysql://localhost:3306/aws_tutorial?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root(123)
+#spring.datasource.password=root(123)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 
